# mana

./: Cargo.toml  README.md  example.mn  foo.mnl  rec_example.mn  rustfmt.toml
examples/: add.mn  assign.mn  euler1_iter.mn  euler1_rec.mn  euler1ish.mn  fib.mn  fib.mnl  iter.mn  iter.mnl  literal.mn  server.mn  server.mnl  simple_loop.mn  tailrec_fib.mn  tests.mnl  type_error.mn  wc.mn  wc.mnl
examples/ideas/: iter.mn  wc.mn
ideas/: generics.mn  iter.mn  tests.mn
src/: ast.rs  bytecode.rs  compile.rs  diagnostic.rs  eval.rs  grammar.lalrpop  intern.rs  interpreter.rs  ir.rs  jit.rs  lex.rs  lexer.rs  lib.rs  main.rs  parse.rs  parser.rs  queries.rs  resolve.rs  ty.rs  types.rs
src/ast/: display.rs  lex.rs  mod.rs  parse.rs
src/ir/: lower.rs  mod.rs  registry.rs  resolve.rs
tests/run/: main.rs
