[package]
name = "mana"
version = "0.1.0"
authors = ["Eli W. Hunter <elihunter173@gmail.com>"]
edition = "2021"

[dependencies]
# Lazy error handling
anyhow = "1.0"

# For Literal BigInt
num = "0.4"

# Query-based parser
salsa = "0.16"

# Lexer
logos = "0.12"

# TODO: Use codespan-reporting for error messages

# Repl
rustyline = "7.1"
clap = { version = "3.0.0-rc.6", features = ["derive"] }

# Compilation
cranelift = "0.78.0"
cranelift-module = "0.78.0"
cranelift-jit = "0.78.0"

[dev-dependencies]
matches = "0.1"
