[package]
name = "mana"
version = "0.1.0"
authors = ["Eli W. Hunter <elihunter173@gmail.com>"]
edition = "2021"

[dependencies]
# Lazy error handling
anyhow = "1.0"

# Error reporting
codespan-reporting = "0.11.1"

# Query-based parser
salsa = "0.16"

# Lexer
logos = "0.12"

# Repl
rustyline = "7.1"
clap = { version = "3.0.0-rc.6", features = ["derive"] }

# Interning
lasso = "0.6.0"

# Compilation
cranelift = "0.78.0"
cranelift-module = "0.78.0"
cranelift-jit = "0.78.0"

[dev-dependencies]
matches = "0.1"
